Added ability to upload when using DefaultDataApp
